--- a/home.css
+++ b/home.css
@@ -1,6 +1,6 @@
 .color-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    grid-template-columns: repeat(5, 1fr);
     gap: 10px;
     padding: 10px;
   }
