--- a/home.css
+++ b/home.css
@@ -1,18 +1,36 @@
+body {
+    background-color: #f0eee5; 
+}
 .color-grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 10px;
-    padding: 10px;
+    position: relative;
+    width: 100%; 
+    height: 100vh; 
   }
   
   .color-box {
-    width: 100%;
-    padding-top: 100%;
+    width: 80px;
+    height: 80px;
+    position: absolute;
   }
   
-  @media (max-width: 768px) {
-    .color-box {
-      padding-top: 50%; 
-    }
-  }
+  .color-box:nth-child(1) { top: 20%; left: 10%; }
+  .color-box:nth-child(2) { top: 40%; left: 30%; }
+  .color-box:nth-child(3) { top: 60%; left: 50%; }
+  .color-box:nth-child(4) { top: 80%; left: 70%; }
+  .color-box:nth-child(5) { top: 10%; left: 90%; }
+  .color-box:nth-child(6) { top: 30%; left: 20%; }
+  .color-box:nth-child(7) { top: 50%; left: 40%; }
+  .color-box:nth-child(8) { top: 70%; left: 60%; }
+  .color-box:nth-child(9) { top: 90%; left: 80%; }
+  .color-box:nth-child(10) { top: 15%; left: 75%; }
+  .color-box:nth-child(11) { top: 35%; left: 55%; }
+  .color-box:nth-child(12) { top: 55%; left: 35%; }
+  .color-box:nth-child(13) { top: 75%; left: 15%; }
+  .color-box:nth-child(14) { top: 10%; left: 20%; }
+  .color-box:nth-child(15) { top: 30%; left: 40%; }
+  .color-box:nth-child(16) { top: 50%; left: 60%; }
+  .color-box:nth-child(17) { top: 70%; left: 80%; }
+  .color-box:nth-child(18) { top: 20%; left: 90%; }
+  .color-box:nth-child(19) { top: 40%; left: 10%; }
+  .color-box:nth-child(20) { top: 60%; left: 30%; }
   
