--- a/page1.css
+++ b/page1.css
@@ -26,6 +26,8 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-size: cover; /* Cover the entire element */
-    background-position: center; /* Center the background image */
+    background-size: cover; 
+    background-position: center; 
+    background-image: url("EC/BKGR_imgs/EC_BKGR_1.webp");
+
 }
