--- a/page1.css
+++ b/page1.css
@@ -4,7 +4,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0eee5; 
+    background-size: cover; 
+    background-position: center; 
+    background-image: url("EC/BKGR_imgs/EC_BKGR_1.webp");
 
 }
 
@@ -18,16 +20,6 @@ body{
     max-height: 100%;
     display: inline-block; 
     vertical-align: middle; 
+    z-index: 1;
 }
 
-.background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover; 
-    background-position: center; 
-    background-image: url("EC/BKGR_imgs/EC_BKGR_1.webp");
-
-}
