--- a/page1.css
+++ b/page1.css
@@ -1,25 +1,20 @@
-body{
-    height: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: cover; 
-    background-position: center; 
-    background-image: url("EC/BKGR_imgs/EC_BKGR_1.webp");
-
-}
 
 .container {
     text-align: center; 
-    max-height: 100%;
+    max-height: 10%;
 }
 
 .container img {
     max-width: 100%;
     max-height: 100%;
     display: inline-block; 
-    vertical-align: middle; 
-    z-index: 1;
+    vertical-align: bottom; 
 }
 
+body {
+    background-image: url("/BKGR_imgs/BKGR_2.jpg");
+    background-color: #cccccc;
+    background-position:center;
+    background-size: cover;
+
+}
