--- a/home.css
+++ b/home.css
@@ -46,12 +46,29 @@ body {
   transform: translate(-50%, -50%);
   background-color: #f0eee5;
   padding: 20px;
+  border: 1px solid black;
   width: 400px;
   height:400px;
-  border-radius: 100%;
   font-family: 'Kode Mono', monospace;
   font-size: 12px;
 }
+
+#secondTextBox {
+  position: fixed;
+  top: 50%;
+  right: 10%; /* Adjust as needed */
+  transform: translate(-50%, -50%);
+  background-color: #f0eee5; /* Same color as the first textbox */
+  border: 1px solid black;
+  padding: 20px;
+  width: 400px; /* Same width as the first textbox */
+  height: 400px; /* Same height as the first textbox */
+  font-family: 'Kode Mono', monospace;
+  font-size: 12px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 999; /* Ensure it's above other elements */
+}
+
 
 .data-item {
   display: flex;
@@ -61,4 +78,12 @@ body {
   height: 100%; /* Ensure the content takes up the full height of the circle */
   width: 200px;
   padding-left: 100px;
+}
+
+ 
+.data-item img {
+  max-width: 100%; /* Ensure the image does not exceed its container's width */
+  height: auto; /* Maintain the aspect ratio of the image */
+  display: block; /* Ensure the image is displayed as a block element */
+  margin: 10px auto; /* Add some margin to center the image horizontally */
 }
