--- a/home.css
+++ b/home.css
@@ -8,34 +8,46 @@ body {
   height: 100vh;
 }
 
-/* Set the width of the color-box elements */
 .color-box {
   width: 5%; /* Adjust the width as needed */
   position: absolute;
   padding-top: 5%; /* This will make height 20% of width, creating squares */
 }
 
+.color-box,
+.data-textbox {
+    cursor: pointer;
+}
 
-.color-box:nth-child(1) { top: 20%; left: 10%; }
-.color-box:nth-child(2) { top: 40%; left: 30%; }
-.color-box:nth-child(3) { top: 60%; left: 50%; }
-.color-box:nth-child(4) { top: 80%; left: 70%; }
-.color-box:nth-child(5) { top: 10%; left: 90%; }
-.color-box:nth-child(6) { top: 30%; left: 20%; }
-.color-box:nth-child(7) { top: 50%; left: 40%; }
-.color-box:nth-child(8) { top: 70%; left: 60%; }
-.color-box:nth-child(9) { top: 90%; left: 80%; }
-.color-box:nth-child(10) { top: 15%; left: 75%; }
-.color-box:nth-child(11) { top: 35%; left: 55%; }
-.color-box:nth-child(12) { top: 55%; left: 35%; }
-.color-box:nth-child(13) { top: 75%; left: 15%; }
-.color-box:nth-child(14) { top: 10%; left: 20%; }
-.color-box:nth-child(15) { top: 30%; left: 40%; }
-.color-box:nth-child(16) { top: 50%; left: 60%; }
-.color-box:nth-child(17) { top: 70%; left: 80%; }
-.color-box:nth-child(18) { top: 20%; left: 90%; }
-.color-box:nth-child(19) { top: 40%; left: 10%; }
-.color-box:nth-child(20) { top: 60%; left: 30%; }
+.color-box:nth-child(1) { top: 15%; left: 25%; }
+.color-box:nth-child(2) { top: 35%; left: 45%; }
+.color-box:nth-child(3) { top: 55%; left: 65%; }
+.color-box:nth-child(4) { top: 75%; left: 85%; }
+.color-box:nth-child(5) { top: 10%; left: 75%; }
+.color-box:nth-child(6) { top: 45%; left: 10%; }
+.color-box:nth-child(7) { top: 80%; left: 55%; }
+.color-box:nth-child(8) { top: 5%; left: 30%; }
+.color-box:nth-child(9) { top: 70%; left: 70%; }
+.color-box:nth-child(10) { top: 25%; left: 85%; }
+.color-box:nth-child(11) { top: 65%; left: 40%; }
+.color-box:nth-child(12) { top: 90%; left: 20%; }
+.color-box:nth-child(13) { top: 60%; left: 75%; }
+.color-box:nth-child(14) { top: 20%; left: 90%; }
+.color-box:nth-child(15) { top: 50%; left: 20%; }
+.color-box:nth-child(16) { top: 85%; left: 65%; }
+.color-box:nth-child(17) { top: 5%; left: 10%; }
+.color-box:nth-child(18) { top: 70%; left: 30%; }
+.color-box:nth-child(19) { top: 5%; left: 55%; }
+.color-box:nth-child(20) { top: 30%; left: 80%; }
+.color-box:nth-child(21) { top: 50%; left: 90%; }
+.color-box:nth-child(22) { top: 20%; left: 40%; }
+.color-box:nth-child(23) { top: 60%; left: 5%; }
+.color-box:nth-child(24) { top: 80%; left: 45%; }
+.color-box:nth-child(25) { top: 10%; left: 65%; }
+.color-box:nth-child(26) { top: 35%; left: 25%; }
+.color-box:nth-child(27) { top: 90%; left: 36%; }
+
+
 
 .data-textbox,
 #secondTextBox {
