--- a/page2.css
+++ b/page2.css
@@ -7,7 +7,7 @@ body {
     left: 0;
     width: 100%;
     height: 60px; /* Increase height for better visibility on smaller screens */
-    background-image: url(EC/imgs/ok.jpeg);
+    background-image: url(/EC/imgs/ok.jpeg);
     display: flex;
     justify-content: space-between; /* Distribute items along the main axis (horizontal) */
     align-items: center;
