--- a/home.css
+++ b/home.css
@@ -174,6 +174,12 @@ body {
   background-color: #ffd966;
 }
 
+.color-box:hover, .data-textbox,
+#secondTextBox{
+  cursor: pointer;
+}
+
+
 /* Media queries for responsiveness */
 @media screen and (max-width: 768px) {
   .color-box {
