--- a/page2.css
+++ b/page2.css
@@ -6,7 +6,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 40px; /* Adjust height as needed */
+    height: 40px; 
     background-image: url(imgs/ok.jpeg);
     display: flex;
     justify-content: space-between;
@@ -17,7 +17,7 @@ body {
     color: white;
     font-size: 24px;
     font-weight: bold;
-    margin-left: 24px; /* Adjust margin as needed to separate it from part 1 */
+    margin-left: 24px; 
     font-family: 'Kode Mono', monospace;
   
   }
@@ -34,7 +34,7 @@ body {
     color: white;
     font-size: 18px;
     font-weight: bold;
-    margin-right: 10px; /* Adjust margin as needed to separate it from part 1 */
+    margin-right: 10px; 
     font-family: 'Kode Mono', monospace;
   
   }
@@ -70,17 +70,16 @@ body {
 
 .content {
     padding: 20px;
-    z-index: 0; /* Ensure content stays below sidebar */
-    overflow-y: auto; /* Enable vertical scrolling */
+    z-index: 0; 
+    overflow-y: auto; 
 }
 
-/* Other CSS rules remain the same */
 
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 10px;
-    margin: 60px 20px 20px; /* Adjusted margin to create space between menu bar and grid */
+    margin: 60px 20px 20px; 
 }
 
 .grid-item {
@@ -94,12 +93,10 @@ body {
 }
 
 .grid-container .grid-item:nth-last-child(-n+3) {
-    grid-column: span 4; /* Adjust the number of columns to span */
+    grid-column: span 4; 
 }
 
-/* Your existing CSS styles */
 
-/* Style for the scattered squares */
 .square {
     position: fixed;
     width: 30px;
@@ -115,7 +112,7 @@ body {
 /* Media queries for responsiveness */
 @media (max-width: 768px) {
     .grid-item {
-        flex-basis: calc(50% - 10px); /* Adjust the width of each grid item for smaller screens */
+        flex-basis: calc(50% - 10px); 
     }
 }
 
